# argus-ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.local.yml  docker-compose.yml
vid-analyser/: Dockerfile.api  Makefile  pyproject.toml
vid-analyser/scripts/: cluster_faces.py  faces.py  telegram_webhook.sh
vid-analyser/src/vid_analyser/: bookings.py  config_schema.py  config_state.py  db.py  overlay.py  overlay_schema.py  prompting.py  video_cleanup.py
vid-analyser/src/vid_analyser/agent/: memory.py  notifier.py  retry.py  telegram_operator.py  utils.py  vid_analyser.py
vid-analyser/src/vid_analyser/api/: __init__.py  app.py  runtime.py
vid-analyser/src/vid_analyser/api/routes/: __init__.py  app_api.py  internal.py  webhooks.py
vid-analyser/src/vid_analyser/api/ui/: __init__.py  config_admin.html  views.py
vid-analyser/src/vid_analyser/db/: __init__.py  database.py  models.py  repository.py  schema.py  session.py  types.py
vid-analyser/src/vid_analyser/db/migrations/: __init__.py  m001_initial_schema.py  m003_agent_memories.py  (+2 more)
vid-analyser/src/vid_analyser/evals/: model.py
vid-analyser/src/vid_analyser/llm/: base.py  gemini.py  response_model.py
vid-analyser/src/vid_analyser/notifications/: __init__.py  base.py  telegram.py
vid-analyser/src/vid_analyser/person_id/: identify.py
vid-analyser/src/vid_analyser/pipeline/: __init__.py  run.py
vid-analyser/src/vid_analyser/storage/: __init__.py  local.py
vid-analyser/src/vid_analyser/ui/: __init__.py  routes.py
vid-analyser/tests/: test_agent_memory.py  test_api_ui.py  test_db_repository.py  test_pipeline_run.py  test_video_cleanup.py
vid-analyser/tests/api/: test_app.py
vid-analyser/tests/pipeline/: test_run.py
(+37 files in other folders)
