[project]
name = "vid-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "boto3>=1.40.0",
    "fastapi>=0.118.0",
    "google-genai>=1.64.0",
    "jinja2>=3.1.6",
    "numpy>=2.4.2",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=21.6,<22",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.37.0",
    "pydantic-ai>=1.73.0",
    "sqlalchemy>=2.0.48",
    "logfire[fastapi]>=4.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.2",
    "streamlit>=1.54.0",
]
ui = [
    "python-dotenv>=1.1.0",
    "streamlit>=1.54.0",
]
